welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:8: error: identifier expected but integer literal found.
def valAbs(100){
           ^nearHundred:14: error: ':' expected but '}' found.
 }
 ^