welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (valAbs(100) <= 10 || valAbs(200) <= 10){
		return true
	}else{
		return false
	}
}
def valAbs(100){
	Math.abs(n - 100)
}
def valAbs(200){
	Math.abs(n - 200)
}